fix: borderline between advantages block cause overflow-x

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -21,6 +21,7 @@ html {
   font-size: 10px;
   scroll-behavior: smooth;
   user-select: none;
+  overflow-x: hidden;
 }
 
 body {
